# tavolarotonda

./: .gitignore  .graphifyignore  HELP.md  LICENSE  README.md  ROADMAP.md  _INDEX.md  benchmark_council.py  pyproject.toml  tavolarotonda-due.md
.claude/: PROJECT-TOD.md
.claude/benchmarks/: models.db
.claude/checkpoints/: CP_20260621_1850.md  CP_20260621_2017.md  CP_20260702_0154.md  CP_20260702_0817.md  CP_20260711_1008.md  CP_20260711_1230.md  CP_20260711_1641.md  CP_20260711_1804.md  CP_20260711_1817.md  (+6 more)
docs/: presentation.html
examples/: audit_target.py
gui/: app.py
output/: audit_report.html  demo_audit.html  demo_qa.html  discussion_3e0385f2e4fd.html  discussion_5aec4c5d9163.html  discussion_5d4ec0d9ff00.html  discussion_625965bc086d.html  discussion_7170f9573220.html  discussion_7b7168255511.html  discussion_9e3ca2505fd9.html  discussion_f2d9fa7a43b6.html  manus_roundtable_audit.html  palace.json  qa_template.html
sessioni/: 2026-07-02-rename-ornith-integration.md  2026-07-02-tr-011-012-013.md  2026-07-11-aq-benchmark-20-domande.md  2026-07-11-aq-synth-roadmap.md  2026-07-11-tr-044-ci.md  sessione-2026-07-11-tr-014-ornith-cli.md
tavolarotonda/: __init__.py  __main__.py  agents.py  config.py  config.yaml  custom_personas.py  debate.py  director.py  evidence.py  exporters.py  i18n.py  mcp_server.py  memory_palace.py  obsidian_vault.py  phases.py  prompts.py  providers.py  reports.py  research_config.py  secretary.py  serve.py  topic_classifier.py  voting.py
tests/: test_confer.py  test_mcp_server.py  test_obsidian.py  test_serve.py  test_smoke.py
(+9 files in other folders)
